setup postgresql as db

--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,8 @@
 							  <artifactId>force-partner-api</artifactId>
 				        </inclusion>
                         <inclusion>
-						    <groupId>mysql</groupId>
-						    <artifactId>mysql-connector-java</artifactId>
+						    <groupId>org.postgresql</groupId>
+						    <artifactId>postgresql</artifactId>
 						</inclusion>
                     </inclusions>
                 </configuration>
