--- a/src/main/resources/dev.properties
+++ b/src/main/resources/dev.properties
@@ -16,5 +16,11 @@ mysql.db = sql9186132
 mysql.user = sql9186132
 mysql.password = dGN53h7Bhc
 
+pgsql.host=sabre-demo.caipvt2o8ihq.us-west-1.rds.amazonaws.com
+pgsql.port=5432
+pgsql.db=sabre
+pgsql.user=sabredbuser
+pgsql.password=Softtek.001
+
 cron.contacts.get=0 33 12 ? * WED
 cron.contacts.post=0 31 9 ? * THU
