--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
 		<mule.version>3.8.5</mule.version>
     	<mule.tools.version>1.2</mule.tools.version>
-		<munit.version>1.3.4</munit.version>
+		<munit.version>1.3.2</munit.version>
 	    <mule.munit.support.version>3.8.3</mule.munit.support.version>
     </properties>
 
@@ -95,6 +95,7 @@
                     <coverage>
                         <runCoverage>true</runCoverage>
                         <formats>
+                        	<format>console</format>
                             <format>html</format>
                         </formats>
                     </coverage>
@@ -171,6 +172,63 @@
 			<version>${mule.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mule.modules</groupId>
+			<artifactId>mule-module-schedulers</artifactId>
+			<version>${mule.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.modules</groupId>
+			<artifactId>mule-module-db</artifactId>
+			<version>${mule.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+	        <groupId>com.mulesoft.plugin</groupId>
+	        <artifactId>mule-plugin-weave</artifactId>
+	        <version>${mule.version}</version>
+	        <scope>provided</scope>
+	    </dependency>
+	    <dependency>
+	        <groupId>com.mulesoft.weave</groupId>
+	        <artifactId>core</artifactId>
+	        <version>1.1.4</version>
+	        <scope>provided</scope>
+	    </dependency>
+	    <dependency>
+	        <groupId>com.mulesoft.weave</groupId>
+	        <artifactId>parser</artifactId>
+	        <version>1.1.4</version>
+	        <scope>provided</scope>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.parboiled</groupId>
+	      <artifactId>parboiled_2.11</artifactId>
+	      <version>2.1.3</version>
+	      <scope>provided</scope>
+	    </dependency>
+	    <!-- https://mvnrepository.com/artifact/org.spire-math/spire_2.11 -->
+		<dependency>
+		    <groupId>org.spire-math</groupId>
+		    <artifactId>spire_2.11</artifactId>
+		    <version>0.11.0</version>
+		    <scope>provided</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.threeten</groupId>
+		    <artifactId>threetenbp</artifactId>
+		    <version>1.3.1</version>
+		    <scope>provided</scope>
+		</dependency>
+	    <!-- https://mvnrepository.com/artifact/org.scala-lang/scala-library -->
+		<dependency>
+		    <groupId>org.scala-lang</groupId>
+		    <artifactId>scala-library</artifactId>
+		    <version>2.11.8</version>
+		    <scope>provided</scope>
+		</dependency>
+			    
 		<!-- for testing -->
 		<dependency>
 			<groupId>org.mule.tests</groupId>
@@ -216,24 +274,30 @@
 			  <artifactId>force-partner-api</artifactId>
 			  <version>39.0.0</version>
         </dependency>
-    <dependency>
+    	<dependency>
             <groupId>com.mulesoft.munit</groupId>
             <artifactId>mule-munit-support</artifactId>
             <version>${mule.munit.support.version}</version>
             <scope>test</scope>
         </dependency>
-    <dependency>
+    	<dependency>
             <groupId>com.mulesoft.munit</groupId>
             <artifactId>munit-runner</artifactId>
             <version>${munit.version}</version>
             <scope>test</scope>
         </dependency>
-    <dependency>
+    	<dependency>
             <groupId>org.mule.modules</groupId>
             <artifactId>mule-module-spring-config</artifactId>
             <version>${mule.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+		    <groupId>org.skyscreamer</groupId>
+		    <artifactId>jsonassert</artifactId>
+		    <version>1.5.0</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
 	<repositories>
