update connection information to db and salesforce

--- a/src/main/resources/dev.properties
+++ b/src/main/resources/dev.properties
@@ -1,7 +1,7 @@
 #Salesforce settings
 sfdc.user=jaime.garciaf@softtek.com
 sfdc.password=Armstrong5
-sfdc.token=B5xttSNopeKw5lZZDiyYcuAjy
+sfdc.token=kTBzDrVAoQpdwknRuF6VtvwXZ
 sfdc.url=https://login.salesforce.com/services/Soap/u/39.0
 
 
@@ -16,10 +16,10 @@ mysql.db = sql9186132
 mysql.user = sql9186132
 mysql.password = dGN53h7Bhc
 
-pgsql.host=sabre-demo.caipvt2o8ihq.us-west-1.rds.amazonaws.com
+pgsql.host=sabre-demo-psql.caipvt2o8ihq.us-west-1.rds.amazonaws.com
 pgsql.port=5432
 pgsql.db=sabre
-pgsql.user=sabredbuser
+pgsql.user=sabreuser
 pgsql.password=Softtek.001
 
 cron.contacts.get=0 33 12 ? * WED
