update salesforce password

--- a/src/main/resources/dev.properties
+++ b/src/main/resources/dev.properties
@@ -1,6 +1,6 @@
 #Salesforce settings
 sfdc.user=jaime.garciaf@softtek.com
-sfdc.password=Armstrong5
+sfdc.password=Sardinas1
 sfdc.token=kTBzDrVAoQpdwknRuF6VtvwXZ
 sfdc.url=https://login.salesforce.com/services/Soap/u/39.0
 
