update salesforce credentials

--- a/src/main/resources/dev.properties
+++ b/src/main/resources/dev.properties
@@ -1,7 +1,7 @@
 #Salesforce settings
 sfdc.user=jaime.garciaf@softtek.com
-sfdc.password=Sardinas1
-sfdc.token=kTBzDrVAoQpdwknRuF6VtvwXZ
+sfdc.password=Softtek.001
+sfdc.token=s7TZz65xc4KYuprYr1BbkMkX
 sfdc.url=https://login.salesforce.com/services/Soap/u/39.0
 
 
